Atualiza o workflow de deploy e o Makefile para incluir a verificação e instalação do Docker, além de adicionar a verificação do OneAgent antes da instalação, melhorando a robustez e a clareza do processo de instalação na EC2.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -197,7 +197,17 @@ jobs:
           echo "DYNATRACE_TOKEN=$DT_TOKEN" >> $GITHUB_ENV
           echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
 
-      - name: 🚀 Executa instalação do OneAgent
+      - name: 🔍 Verifica e instala OneAgent
         run: |
           cd config
           make install-oneagent
+
+      - name: 🐳 Verifica e instala Docker
+        run: |
+          cd config
+          make install-docker
+
+      - name: 🧹 Limpa arquivos temporários
+        run: |
+          cd config
+          make clean
