--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -226,35 +226,27 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y make curl
 
-      - name: 🔐 Obtém credenciais do Vault
+      - name: 🔐 Obtém IP da EC2 e chave SSH do Vault
         run: |
-          echo "🔐 Obtendo credenciais Dynatrace do Vault..."
-          VAULT_DT=$(curl -s --header "X-Vault-Token: $VAULT_TOKEN" \
-            --request GET \
-            $VAULT_ADDR/v1/kv/data/dynatrace)
-          
-          DT_ENV=$(echo "$VAULT_DT" | jq -r '.data.data.env')
-          DT_TOKEN=$(echo "$VAULT_DT" | jq -r '.data.data.token')
-          
-          if [ -z "$DT_ENV" ] || [ -z "$DT_TOKEN" ]; then
-            echo "❌ Erro: Não foi possível obter as credenciais do Dynatrace"
-            exit 1
-          fi
-          
-          echo "DYNATRACE_ENV=$DT_ENV" >> $GITHUB_ENV
-          echo "DYNATRACE_TOKEN=$DT_TOKEN" >> $GITHUB_ENV
-
-          echo "🔐 Obtendo IP da EC2 do Vault..."
+          echo "🔍 Obtendo IP da EC2 do Vault..."
           VAULT_EC2=$(curl -s --header "X-Vault-Token: $VAULT_TOKEN" \
             --request GET \
             $VAULT_ADDR/v1/kv/data/ec2-ip)
           
-          EC2_IP=$(echo "$VAULT_EC2" | jq -r '.data.data.ip')
+          # Pega apenas o primeiro IP encontrado
+          EC2_IP=$(echo "$VAULT_EC2" | jq -r '.data.data.ip' | head -n1 | tr -d '\n\r')
           if [ -z "$EC2_IP" ]; then
             echo "❌ Erro: Não foi possível obter o IP da EC2"
             exit 1
           fi
           
+          # Valida se é um IP válido
+          if ! echo "$EC2_IP" | grep -qE '^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$'; then
+            echo "❌ Erro: IP inválido obtido do Vault: $EC2_IP"
+            exit 1
+          fi
+          
+          echo "IP obtido: $EC2_IP"
           echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
 
       - name: 🔑 Configura chave SSH
